# pjproject

./: .gitattributes  .gitignore  Makefile  aconfigure  aconfigure.ac  configure
crashdumper/: crashdumper.cpp  crashdumper.h  crashdumper.vcxproj  crashdumper.vcxproj.filters
easywsclient/: CMakeLists.txt  ReadMe.txt  easywsclient.cpp  easywsclient.h  easywsclient.vcxproj  easywsclient.vcxproj.filters  easywsclient_cpp.cpp  easywsclient_cpp.hpp  stdafx.cpp  stdafx.h
easywsclient/WSS_version/: About.txt  easywsclient.cpp
pjlib/include/pj/: os.h
pjlib/src/pj/: log.c  os_core_unix_ex.c  os_core_win32.c  os_core_win32_ex.c
pjsip-apps/src/pjsua/: main.c  pjsua_app.c  pjsua_app_config.c  pjsua_app_legacy.c
pjsip-apps/src/pjsua/easywsclient/: easywsclient.hpp
pjsip/include/pjsip/: sip_config.h
pjsip/include/pjsua-lib/: pjsua.h
pjsip/src/pjsua-lib/: pjsua_acc.c  pjsua_call.c  pjsua_core.c
